tests/reference/asr-func_08-c137415.stderr
semantic error: Intent annotation 'In' cannot be used here
 --> tests/errors/func_08.py:3:17
  |
3 | def main0(x: In[In[i32]]):
  |                 ^^^^^^^ 
